--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "tw-animate-css": "^1.2.5",
     "uploadthing": "^7.5.2",
     "uuid": "^11.1.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
